@@ -1,34 +1,38 @@
 package com.wedit.backend.api.vendor.service;
 
-import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.wedit.backend.api.aws.s3.service.S3Service;
-import com.wedit.backend.api.review.repository.ReviewRepository;
-import com.wedit.backend.api.vendor.dto.details.*;
-import com.wedit.backend.api.vendor.dto.response.VendorDetailsResponseDTO;
-import com.wedit.backend.api.vendor.dto.response.VendorListResponseDTO;
-import com.wedit.backend.api.vendor.dto.response.VendorReviewStatsDTO;
-import com.wedit.backend.api.vendor.entity.enums.Category;
-import com.wedit.backend.common.exception.NotFoundException;
-import com.wedit.backend.common.response.ErrorStatus;
+import com.wedit.backend.api.vendor.entity.*;
+
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.wedit.backend.api.vendor.entity.Vendor;
-import com.wedit.backend.api.vendor.entity.VendorImage;
+import com.wedit.backend.api.aws.s3.service.S3Service;
+import com.wedit.backend.api.media.entity.Media;
+import com.wedit.backend.api.media.entity.enums.MediaDomain;
+import com.wedit.backend.api.media.service.MediaService;
 import com.wedit.backend.api.vendor.dto.request.VendorCreateRequestDTO;
-import com.wedit.backend.api.vendor.entity.enums.VendorImageType;
-import com.wedit.backend.api.vendor.repository.VendorImageRepository;
+import com.wedit.backend.api.vendor.dto.response.ProductResponseDTO;
+import com.wedit.backend.api.vendor.dto.response.VendorAddressResponseDTO;
+import com.wedit.backend.api.vendor.dto.response.VendorBannerResponseDTO;
+import com.wedit.backend.api.vendor.dto.response.VendorDetailResponseDTO;
+import com.wedit.backend.api.vendor.entity.enums.DressOrigin;
+import com.wedit.backend.api.vendor.entity.enums.DressStyle;
+import com.wedit.backend.api.vendor.entity.enums.HallMeal;
+import com.wedit.backend.api.vendor.entity.enums.HallStyle;
+import com.wedit.backend.api.vendor.entity.enums.MakeupStyle;
+import com.wedit.backend.api.vendor.entity.enums.StudioSpecialShot;
+import com.wedit.backend.api.vendor.entity.enums.StudioStyle;
+import com.wedit.backend.api.vendor.entity.enums.VendorType;
+import com.wedit.backend.api.vendor.repository.RegionRepository;
+import com.wedit.backend.api.vendor.repository.VendorProductQueryRepository;
 import com.wedit.backend.api.vendor.repository.VendorRepository;
+import com.wedit.backend.common.exception.BadRequestException;
+import com.wedit.backend.common.exception.NotFoundException;
+import com.wedit.backend.common.response.ErrorStatus;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -39,249 +43,385 @@ import lombok.extern.slf4j.Slf4j;
 public class VendorService {
 
 	private final VendorRepository vendorRepository;
-	private final VendorImageRepository vendorImageRepository;
-    private final ReviewRepository reviewRepository;
-    private final ObjectMapper objectMapper;
-    private final S3Service s3Service;
+	private final RegionRepository regionRepository;
+	private final S3Service s3Service;
+	private final MediaService mediaService;
+	private final ProductService productService;
+	private final VendorProductQueryRepository vendorProductQueryRepository;
 
-    private static final int RANDOM_POOL_SIZE = 100;
+	@Transactional
+	public Long createVendor(VendorCreateRequestDTO request) {
+		log.info("업체 생성을 시작합니다. 업체명: '{}', 타입: {}", request.getName(), request.getVendorType());
 
-    @Transactional
-	public Vendor createVendor(VendorCreateRequestDTO request) {
-        log.info("업체 생성 시작. 이름: {}, 카테고리: {}", request.getName(), request.getDetails().getCategory());
+		Region region = regionRepository.findByCode(request.getRegionCode())
+			.orElseThrow(() -> new NotFoundException("지역 code를 찾을 수 없습니다: " + request.getRegionCode()));
 
-        // 카테고리별 상세 정보 직렬화
-        String detailsJson = convertDetailsToJson(request.getDetails());
+		if (region.getLevel() != 3) {
+			log.warn("잘못된 지역 레벨입니다. 최소 단위(level 3) 지역 코드가 필요합니다. regionId: {}, level: {}", region.getId(),
+				region.getLevel());
+			throw new BadRequestException(ErrorStatus.BAD_REQUEST_REQUIRED_LEAST_REGION_CODE.getMessage());
+		}
 
-        // 1. 새 Vendor 생성
-        Vendor vendor = Vendor.builder()
-                .name(request.getName())
-                .phoneNumber(request.getPhoneNumber())
-                .category(request.getDetails().getCategory())
-                .description(request.getDescription())
-                .address(request.getAddress() != null ? request.getAddress().toEntity() : null)
-                .minimumAmount(request.getMinimumAmount())
-                .details(detailsJson)
-                .build();
+		Vendor vendor = Vendor.builder()
+			.name(request.getName())
+			.vendorType(request.getVendorType())
+			.phoneNumber(request.getPhoneNumber())
+			.description(request.getDescription())
+			.region(region)
+			.fullAddress(request.getFullAddress())
+			.addressDetail(request.getAddressDetail())
+			.latitude(request.getLatitude())
+			.longitude(request.getLongitude())
+			.kakaoMapUrl(request.getKakaoMapUrl())
+			.build();
 
-        // 2. 모든 이미지 엔티티 생성
-        List<VendorImage> allImages = new ArrayList<>();
-        // 로고 이미지
-        if (request.getLogoImageKey() != null && !request.getLogoImageKey().isEmpty()) {
-            allImages.add(createImage(vendor, request.getLogoImageKey(), VendorImageType.LOGO, 0, null, null, null));
-        }
-        // 대표 이미지
-        if (request.getMainImageKey() != null && !request.getMainImageKey().isEmpty()) {
-            allImages.add(createImage(vendor, request.getMainImageKey(), VendorImageType.MAIN, 0, null, null, null));
-        }
-        // 그룹 이미지
-        if (request.getImageGroups() != null) {
-            for (VendorCreateRequestDTO.ImageGroupDTO groupDTO : request.getImageGroups()) {
-                List<String> imageKeys = groupDTO.getImageKeys();
-                if (imageKeys != null) {
-                    for (int i = 0; i < imageKeys.size(); i++) {
-                        allImages.add(createImage(vendor, imageKeys.get(i), VendorImageType.GROUPED, i, groupDTO.getGroupTitle(), groupDTO.getGroupDescription(), groupDTO.getSortOrder()));
-                    }
-                }
-            }
-        }
+		Vendor savedVendor = vendorRepository.save(vendor);
 
-        // 3. Vendor 이미지 리스트 연관관계 설정
-        vendor.setImages(allImages);
-        log.info("총 {}개의 이미지와 함께 업체 저장을 시도합니다.", allImages.size());
+		if (request.getLogoImage() != null) {
+			Media logo = request.getLogoImage().toEntity(MediaDomain.VENDOR, savedVendor.getId());
+			Media savedLogo = mediaService.save(logo);
+			savedVendor.setLogoMedia(savedLogo);
+		}
+		if (request.getMainImage() != null) {
+			Media rep = request.getMainImage().toEntity(MediaDomain.VENDOR, savedVendor.getId());
+			Media savedRep = mediaService.save(rep);
+			savedVendor.setRepMedia(savedRep);
+		}
 
-        // 4. Vendor 저장
-        Vendor savedVendor = vendorRepository.save(vendor);
-        log.info("업체 및 모든 이미지 생성 성공. 업체 ID: {}", savedVendor.getId());
-
-        return savedVendor;
+		log.info("업체 생성 완료. ID: {}, 업체명: '{}'", savedVendor.getId(), savedVendor.getName());
+		return savedVendor.getId();
 	}
 
-    @Transactional(readOnly = true)
-    public VendorDetailsResponseDTO getVendorDetail(Long vendorId) {
-        log.info("업체 상세 정보 조회를 시작합니다. 업체 ID: {}", vendorId);
+	@Transactional(readOnly = true)
+	public VendorDetailResponseDTO getVendorDetail(Long vendorId) {
+		log.debug("업체 상세 조회 시작 - vendorId: {}", vendorId);
 
-        // 1. Vendor와 연관된 모든 이미지 조회 (N+1 방지)
-        Vendor vendor = vendorRepository.findVendorWithImagesById(vendorId)
-                .orElseThrow(() -> new NotFoundException(ErrorStatus.NOT_FOUND_VENDOR.getMessage()));
-        log.info("업체 조회 성공. 이름: {}, 카테고리: {}", vendor.getName(), vendor.getCategory());
+		Vendor vendor = vendorRepository.findById(vendorId)
+			.orElseThrow(() -> new NotFoundException(ErrorStatus.NOT_FOUND_VENDOR.getMessage() + " : " + vendorId));
 
-        // 2. 카테고리별 details DTO 역직렬화
-        VendorDetailsDTO detailsDTO = deserializeDetails(vendor.getDetails(), vendor.getCategory());
+		List<VendorDetailResponseDTO.ProductSummaryDTO> products = productService.getProductsByVendorId(vendor.getId());
 
-        // 3. 이미지 분류
-        List<VendorImage> images = vendor.getImages();
-        log.info("총 {}개의 연관 이미지를 처리합니다.", images.size());
-        
-        // 4. 대표 이지미 찾기
-        String mainUrl = images.stream()
-                .filter(img -> img.getImageType() == VendorImageType.MAIN)
-                .findFirst()
-                .map(img -> s3Service.generatePresignedGetUrl(img.getImageKey()).getPresignedUrl())
-                .orElse(null);
+		String repMediaUrl = (vendor.getRepMedia() != null)
+			? s3Service.toCdnUrl(vendor.getRepMedia().getMediaKey())
+			: null;
 
-        // 5. 그룹 이미지들을 묶고 정렬하여 DTO 변환
-        List<VendorDetailsResponseDTO.ImageGroupResponseDTO> imageGroupResponse = images.stream()
-                .filter(img -> img.getImageType() == VendorImageType.GROUPED)
-                .collect(Collectors.groupingBy(VendorImage::getGroupTitle))
-                .entrySet().stream()
-                .map(entry -> {
-                    List<VendorImage> groupImages = entry.getValue();
-                    groupImages.sort(Comparator.comparing(VendorImage::getSortOrder));
+		log.info("업체 상세 조회 완료 - vendorId: {}, 상품 개수: {}", vendorId, products.size());
 
-                    List<VendorDetailsResponseDTO.ImageResponseDTO> imageResponseDTOs = groupImages.stream()
-                            .map(img -> VendorDetailsResponseDTO.ImageResponseDTO.builder()
-                                    .imageUrl(s3Service.generatePresignedGetUrl(img.getImageKey()).getPresignedUrl())
-                                    .sortOrder(img.getSortOrder())
-                                    .build())
-                            .collect(Collectors.toList());
+		return VendorDetailResponseDTO.builder()
+			.vendorId(vendor.getId())
+			.vendorName(vendor.getName())
+			.vendorType(vendor.getVendorType())
+			.phoneNumber(vendor.getPhoneNumber())
+			.description(vendor.getDescription())
+			.fullAddress(vendor.getFullAddress())
+			.addressDetail(vendor.getAddressDetail())
+			.repMediaUrl(repMediaUrl)
+			.latitude(vendor.getLatitude())
+			.longitude(vendor.getLongitude())
+			.kakaoMapUrl(vendor.getKakaoMapUrl())
+			.products(products)
+			.build();
+	}
 
-                    return VendorDetailsResponseDTO.ImageGroupResponseDTO.builder()
-                            .groupTitle(entry.getKey())
-                            .groupDescription(groupImages.getFirst().getGroupDescription())
-                            .groupSortOrder(groupImages.getFirst().getGroupSortOrder())
-                            .images(imageResponseDTOs)
-                            .build();
-                })
-                .sorted(Comparator.comparing(VendorDetailsResponseDTO.ImageGroupResponseDTO::getGroupSortOrder))
-                .collect(Collectors.toList());
+	@Transactional(readOnly = true)
+	public Page<VendorBannerResponseDTO> getVendorsForBanner(VendorType vendorType, Pageable pageable) {
 
-        log.info("업체 상세 정보 응답 DTO 생성을 완료했습니다. 업체 ID: {}", vendorId);
+		LocalDateTime twoWeeksAgo = LocalDateTime.now().minusWeeks(2);
 
-        // 6. DTO 생성 후 반환
-        return VendorDetailsResponseDTO.builder()
-                .vendorId(vendor.getId())
-                .name(vendor.getName())
-                .phoneNumber(vendor.getPhoneNumber())
-                .category(vendor.getCategory())
-                .description(vendor.getDescription())
-                .address(vendor.getAddress())
-                .details(detailsDTO)
-                .mainImageUrl(mainUrl)
-                .imageGroups(imageGroupResponse)
-                .build();
-    }
+		Page<Vendor> vendorPage = vendorRepository.findByVendorTypeOrderByRecentReviews(vendorType, twoWeeksAgo,
+			pageable);
 
-    @Transactional(readOnly = true)
-    public Page<VendorListResponseDTO> getVendorListByCategory(Category category, Pageable pageable) {
+		return vendorPage.map(vendor -> {
 
-        log.info("카테고리별 업체 목록 조회를 시작합니다. 카테고리: {}", category);
+			String logoUrl = (vendor.getLogoMedia() != null)
+				? s3Service.toCdnUrl(vendor.getLogoMedia().getMediaKey())
+				: null;
+			String regionName = (vendor.getRegion() != null)
+				? vendor.getRegion().getName()
+				: null;
 
-        LocalDateTime twoWeeksAgo = LocalDateTime.now().minusWeeks(2);
+			return VendorBannerResponseDTO.builder()
+				.vendorId(vendor.getId())
+				.vendorName(vendor.getName())
+				.logoImageUrl(logoUrl)
+				.regionName(regionName)
+				.averageRating(vendor.getAverageRating())
+				.reviewCount(vendor.getReviewCount())
+				.build();
+		});
+	}
 
-        // 1. DB 에서 인기순으로 ID 목록 조회 (랜덤 풀 확보)
-        List<Long> topVendorIds = vendorRepository.findVendorIdsByCategoryOrderByRecentReviews(
-                category, twoWeeksAgo, PageRequest.of(0, RANDOM_POOL_SIZE)
-        );
+	/**
+	 * 입력받은 지역 코드들을 분석하여 모든 level 3 지역 코드들로 확장합니다.
+	 * - null 또는 빈 리스트: 그대로 반환 (모든 지역 검색)
+	 * - level 3 코드: 그대로 사용
+	 * - level 2 코드: 해당 지역에 속하는 모든 level 3 코드들로 확장
+	 * - level 1 코드: 해당 지역에 속하는 모든 level 3 코드들로 확장
+	 */
+	private List<String> expandToLevel3RegionCodes(List<String> inputRegionCodes) {
+		if (inputRegionCodes == null || inputRegionCodes.isEmpty()) {
+			log.debug("지역 코드가 null 또는 빈 리스트이므로 모든 지역을 대상으로 검색합니다.");
+			return inputRegionCodes; // null이나 빈 리스트 그대로 반환하여 조건 제외
+		}
 
-        if (topVendorIds.isEmpty()) {
-            return Page.empty(pageable);
-        }
+		List<String> level3Codes = new ArrayList<>();
 
-        // 2. ID 목록 셔플 및 수동 페이징
-        Collections.shuffle(topVendorIds);
+		for (String regionCode : inputRegionCodes) {
+			Optional<Region> regionOpt = regionRepository.findByCode(regionCode);
 
-        int start = (int) pageable.getOffset();
-        int end = Math.min((start + pageable.getPageSize()), topVendorIds.size());
+			if (regionOpt.isEmpty()) {
+				log.warn("존재하지 않는 지역 코드입니다: {}", regionCode);
+				continue;
+			}
 
-        if (start >= topVendorIds.size()) {
-            return Page.empty(pageable);
-        }
-        List<Long> paginatedIds = topVendorIds.subList(start, end);
+			Region region = regionOpt.get();
 
-        // 3. 페이징된 ID로 실제 데이터 Batch 조회
-        List<Vendor> vendors = vendorRepository.findAllById(paginatedIds);
+			switch (region.getLevel()) {
+				case 3:
+					// level 3은 그대로 추가
+					level3Codes.add(regionCode);
+					break;
 
-        // findAllById는 순서를 보장하지 않으므로, 셔플된 순서대로 재정렬
-        Map<Long, Vendor> vendorMap = vendors.stream()
-                .collect(Collectors.toMap(Vendor::getId, Function.identity()));
+				case 2:
+					// level 2의 하위 level 3들을 모두 조회해서 추가
+					List<String> childLevel3Codes = regionRepository.findLevel3CodesByParentCode(regionCode);
+					level3Codes.addAll(childLevel3Codes);
+					log.debug("level 2 지역 {} 에서 {} 개의 level 3 지역 확장", regionCode, childLevel3Codes.size());
+					break;
 
-        List<Vendor> vendorsOnPage = paginatedIds.stream()
-                .map(vendorMap::get)
-                .collect(Collectors.toList());
+				case 1:
+					// level 1의 하위 level 3들을 모두 조회해서 추가
+					List<String> grandChildLevel3Codes = regionRepository.findLevel3CodesByGrandParentCode(regionCode);
+					level3Codes.addAll(grandChildLevel3Codes);
+					log.debug("level 1 지역 {} 에서 {} 개의 level 3 지역 확장", regionCode, grandChildLevel3Codes.size());
+					break;
 
-        // 4. 추가 정보 Batch 조회
-        // 후기 평점 평균, 총 후기 개수
-        Map<Long, VendorReviewStatsDTO> statsMap = reviewRepository.findReviewStatsByVendorIds(paginatedIds).stream()
-                .collect(Collectors.toMap(VendorReviewStatsDTO::getVendorId, Function.identity()));
-        // 로고 이미지
-        Map<Long, String> logoUrlMap = vendorImageRepository.findAllByVendorInAndImageType(vendorsOnPage, VendorImageType.LOGO).stream()
-                .collect(Collectors.toMap(
-                        image -> image.getVendor().getId(),
-                        image -> s3Service.generatePresignedGetUrl(image.getImageKey()).getPresignedUrl()));
+				default:
+					log.warn("지원하지 않는 지역 레벨입니다: {} (level: {})", regionCode, region.getLevel());
+			}
+		}
 
-        // 5. 최종 DTO 조립 및 Page 생성
-        List<VendorListResponseDTO> dtoList = vendorsOnPage.stream()
-                .map(vendor -> VendorListResponseDTO.builder()
-                        .vendorId(vendor.getId())
-                        .name(vendor.getName())
-                        .category(vendor.getCategory())
-                        .dong(vendor.getAddress() != null ? vendor.getAddress().getDong() : null)
-                        .logoImageUrl(logoUrlMap.get(vendor.getId()))
-                        .totalReviewCount(statsMap.getOrDefault(vendor.getId(), new VendorReviewStatsDTO(vendor.getId(), 0L, 0.0)).getReviewCount())
-                        .averageRating(statsMap.getOrDefault(vendor.getId(), new VendorReviewStatsDTO(vendor.getId(), 0L, 0.0)).getAverageRating())
-                        .build())
-                .collect(Collectors.toList());
+		// 중복 제거
+		List<String> uniqueLevel3Codes = level3Codes.stream().distinct().toList();
+		log.debug("지역 코드 확장 완료: {} -> {} ({}개)", inputRegionCodes, uniqueLevel3Codes, uniqueLevel3Codes.size());
 
-        return new PageImpl<>(dtoList, pageable, topVendorIds.size());
-    }
+		return uniqueLevel3Codes;
+	}
 
-    // JSON 문자열을 category에 맞는 VendorDetailsDTO 객체로 역직렬화
-    private VendorDetailsDTO deserializeDetails(String json, Category category) {
-        if (json == null || category == null) {
-            return null;
-        }
+	public List<ProductResponseDTO> searchWeddingHall(List<String> regionCodes, Integer price,
+		List<HallStyle> hallStyles, List<HallMeal> hallMeals, Integer capacity, Boolean hasParking) {
 
-        try {
-            Class<? extends VendorDetailsDTO> dtoClass = getDetailsClass(category);
-            return objectMapper.readValue(json, dtoClass);
-        } catch (IOException e) {
-            log.error("Vendor details 역직렬화 실패: category={}, json={}", category, json, e);
-            throw new RuntimeException("업체 상세 정보 변환에 실패했습니다.", e);
-        }
-    }
+		log.info("웨딩홀 검색 시작 - regionCodes: {}, price: {}, hallStyles: {}, hallMeals: {}, capacity: {}, hasParking: {}",
+			regionCodes, price, hallStyles, hallMeals, capacity, hasParking);
 
-    // Category enum 값에 따라 해당하는 DTO 클래스 반환
-    private Class<? extends VendorDetailsDTO> getDetailsClass(Category category) {
-        return switch (category) {
-            case WEDDING_HALL -> WeddingHallDetailsDTO.class;
-            case DRESS -> DressDetailsDTO.class;
-            case STUDIO -> StudioDetailsDTO.class;
-            case MAKEUP ->  MakeupDetailsDTO.class;
-            default -> {
-                log.error("지원하지 않는 카테고리 타입입니다: {}", category);
-                throw new IllegalArgumentException("지원하지 않는 카테고리입니다: " + category);
-            }
-        };
-    }
+		long startTime = System.currentTimeMillis();
 
-    // Map<String, Object> details를 JSON 문자열로 직렬화
-    private String convertDetailsToJson(Object details) {
-        if (details == null) {
-            return null;
-        }
+		try {
+			// 유효성 검증: 음수값 체크
+			if (price != null && price <= 0) {
+				throw new BadRequestException("가격은 0보다 커야 합니다.");
+			}
+			if (capacity != null && capacity <= 0) {
+				throw new BadRequestException("수용 인원은 1명 이상이어야 합니다.");
+			}
 
-        try {
-            return objectMapper.writeValueAsString(details);
-        } catch (Exception e) {
-            log.error("Vendor details 직렬화 실패: details DTO = {}", details, e);
-            throw new RuntimeException("업체 상세 정보 직렬화에 실패했습니다.", e);
-        }
-    }
+			// 입력받은 지역 코드를 level 3 코드들로 확장
+			List<String> expandedRegionCodes = expandToLevel3RegionCodes(regionCodes);
 
-    // VendorImage 객체 생성 헬퍼 메서드
-    private VendorImage createImage(Vendor vendor, String imageKey,
-                                    VendorImageType type, int sortOrder,
-                                    String groupTitle, String groupDescription,
-                                    Integer groupSortOrder) {
-        return VendorImage.builder()
-                .vendor(vendor)
-                .imageKey(imageKey)
-                .imageType(type)
-                .sortOrder(sortOrder)
-                .groupTitle(groupTitle)
-                .groupDescription(groupDescription)
-                .groupSortOrder(groupSortOrder)
-                .build();
-    }
+			List<VendorProductQueryRepository.VendorWithMinPrice> vendorsWithPrice =
+				vendorProductQueryRepository.searchWeddingHallVendors(
+					expandedRegionCodes, price, hallStyles, hallMeals, capacity, hasParking);
+
+			List<ProductResponseDTO> results = vendorsWithPrice.stream()
+				.map(vendorWithPrice -> convertToProductResponseDTO(
+					vendorWithPrice.vendor, vendorWithPrice.minPrice != null ? vendorWithPrice.minPrice : 0L))
+				.toList();
+
+			long endTime = System.currentTimeMillis();
+			log.info("[PERFORMANCE] 웨딩홀 검색 (QueryDSL) 완료 - {} 개 업체 결과, 소요시간: {}ms (확장된 지역: {}개)",
+				results.size(), (endTime - startTime), expandedRegionCodes == null ? 0 : expandedRegionCodes.size());
+			return results;
+		} catch (Exception e) {
+			long endTime = System.currentTimeMillis();
+			log.error("웨딩홀 검색 실패 (QueryDSL) - regionCodes: {}, price: {}, 소요시간: {}ms",
+				regionCodes, price, (endTime - startTime), e);
+			throw e;
+		}
+	}
+
+	/**
+	 * 순수 JPA를 사용한 웨딩홀 검색 (성능 비교용)
+	 */
+	public List<ProductResponseDTO> searchWeddingHallWithJPA(List<String> regionCodes, Integer price,
+		List<HallStyle> hallStyles, List<HallMeal> hallMeals, Integer capacity, Boolean hasParking) {
+
+		log.info(
+			"웨딩홀 검색 시작 (JPA) - regionCodes: {}, price: {}, hallStyles: {}, hallMeals: {}, capacity: {}, hasParking: {}",
+			regionCodes, price, hallStyles, hallMeals, capacity, hasParking);
+
+		try {
+			// 유효성 검증: 음수값 체크
+			if (price != null && price <= 0) {
+				throw new BadRequestException("가격은 0보다 커야 합니다.");
+			}
+			if (capacity != null && capacity <= 0) {
+				throw new BadRequestException("수용 인원은 1명 이상이어야 합니다.");
+			}
+
+			// 입력받은 지역 코드를 level 3 코드들로 확장
+			List<String> expandedRegionCodes = expandToLevel3RegionCodes(regionCodes);
+
+			List<VendorProductQueryRepository.VendorWithMinPrice> vendorsWithPrice =
+				vendorProductQueryRepository.searchWeddingHallVendorsWithJPA(
+					expandedRegionCodes, price, hallStyles, hallMeals, capacity, hasParking);
+
+			List<ProductResponseDTO> results = vendorsWithPrice.stream()
+				.map(vendorWithPrice -> convertToProductResponseDTO(
+					vendorWithPrice.vendor, vendorWithPrice.minPrice != null ? vendorWithPrice.minPrice : 0L))
+				.toList();
+
+			log.info("웨딩홀 검색 성공 (JPA) - {} 개 업체 결과 반환 (확장된 지역: {}개)", results.size(),
+				expandedRegionCodes == null ? 0 : expandedRegionCodes.size());
+			return results;
+		} catch (Exception e) {
+			log.error("웨딩홀 검색 실패 (JPA) - regionCodes: {}, price: {}", regionCodes, price, e);
+			throw e;
+		}
+	}
+
+	public List<ProductResponseDTO> searchStudio(List<String> regionCodes, Integer price,
+		List<StudioStyle> studioStyles,
+		List<StudioSpecialShot> studioSpecialShots, Boolean iphoneSnap) {
+
+		log.info("스튜디오 검색 시작 - regionCodes: {}, price: {}, studioStyles: {}, specialShots: {}, iphoneSnap: {}",
+			regionCodes, price, studioStyles, studioSpecialShots, iphoneSnap);
+
+		try {
+			// 유효성 검증: 음수값 체크
+			if (price != null && price <= 0) {
+				throw new BadRequestException("가격은 0보다 커야 합니다.");
+			}
+
+			// 입력받은 지역 코드를 level 3 코드들로 확장
+			List<String> expandedRegionCodes = expandToLevel3RegionCodes(regionCodes);
+
+			List<VendorProductQueryRepository.VendorWithMinPrice> vendorsWithPrice =
+				vendorProductQueryRepository.searchStudioVendors(
+					expandedRegionCodes, price, studioStyles, studioSpecialShots, iphoneSnap);
+
+			List<ProductResponseDTO> results = vendorsWithPrice.stream()
+				.map(vendorWithPrice -> convertToProductResponseDTO(
+					vendorWithPrice.vendor, vendorWithPrice.minPrice != null ? vendorWithPrice.minPrice : 0L))
+				.toList();
+
+			log.info("스튜디오 검색 성공 - {} 개 업체 결과 반환 (확장된 지역: {}개)", results.size(),
+				expandedRegionCodes == null ? 0 : expandedRegionCodes.size());
+			return results;
+		} catch (Exception e) {
+			log.error("스튜디오 검색 실패 - regionCodes: {}, price: {}", regionCodes, price, e);
+			throw e;
+		}
+	}
+
+	public List<ProductResponseDTO> searchMakeup(List<String> regionCodes, Integer price,
+		List<MakeupStyle> makeupStyles,
+		Boolean isStylistDesignationAvailable, Boolean hasPrivateRoom) {
+
+		log.info("메이크업 검색 시작 - regionCodes: {}, price: {}, makeupStyles: {}, stylistDesignation: {}, privateRoom: {}",
+			regionCodes, price, makeupStyles, isStylistDesignationAvailable, hasPrivateRoom);
+
+		try {
+			// 유효성 검증: 음수값 체크
+			if (price != null && price <= 0) {
+				throw new BadRequestException("가격은 0보다 커야 합니다.");
+			}
+
+			// 입력받은 지역 코드를 level 3 코드들로 확장
+			List<String> expandedRegionCodes = expandToLevel3RegionCodes(regionCodes);
+
+			List<VendorProductQueryRepository.VendorWithMinPrice> vendorsWithPrice =
+				vendorProductQueryRepository.searchMakeupVendors(
+					expandedRegionCodes, price, makeupStyles, isStylistDesignationAvailable, hasPrivateRoom);
+
+			List<ProductResponseDTO> results = vendorsWithPrice.stream()
+				.map(vendorWithPrice -> convertToProductResponseDTO(
+					vendorWithPrice.vendor, vendorWithPrice.minPrice != null ? vendorWithPrice.minPrice : 0L))
+				.toList();
+
+			log.info("메이크업 검색 성공 - {} 개 업체 결과 반환 (확장된 지역: {}개)", results.size(),
+				expandedRegionCodes == null ? 0 : expandedRegionCodes.size());
+			return results;
+		} catch (Exception e) {
+			log.error("메이크업 검색 실패 - regionCodes: {}, price: {}", regionCodes, price, e);
+			throw e;
+		}
+	}
+
+	public List<ProductResponseDTO> searchDress(List<String> regionCodes, Integer price,
+		List<DressStyle> dressStyles, List<DressOrigin> dressOrigins) {
+
+		log.info("드레스 검색 시작 - regionCodes: {}, price: {}, dressStyles: {}, dressOrigins: {}",
+			regionCodes, price, dressStyles, dressOrigins);
+
+		try {
+			// 유효성 검증: 음수값 체크
+			if (price != null && price <= 0) {
+				throw new BadRequestException("가격은 0보다 커야 합니다.");
+			}
+
+			// 입력받은 지역 코드를 level 3 코드들로 확장
+			List<String> expandedRegionCodes = expandToLevel3RegionCodes(regionCodes);
+
+			List<VendorProductQueryRepository.VendorWithMinPrice> vendorsWithPrice =
+				vendorProductQueryRepository.searchDressVendors(
+					expandedRegionCodes, price, dressStyles, dressOrigins);
+
+			List<ProductResponseDTO> results = vendorsWithPrice.stream()
+				.map(vendorWithPrice -> convertToProductResponseDTO(
+					vendorWithPrice.vendor, vendorWithPrice.minPrice != null ? vendorWithPrice.minPrice : 0L))
+				.toList();
+
+			log.info("드레스 검색 성공 - {} 개 업체 결과 반환 (확장된 지역: {}개)", results.size(),
+				expandedRegionCodes == null ? 0 : expandedRegionCodes.size());
+			return results;
+		} catch (Exception e) {
+			log.error("드레스 검색 실패 - regionCodes: {}, price: {}", regionCodes, price, e);
+			throw e;
+		}
+	}
+
+	private ProductResponseDTO convertToProductResponseDTO(Vendor vendor, Long minPrice) {
+		return ProductResponseDTO.builder()
+			.basePrice(minPrice)
+			.vendorId(vendor.getId())
+			.vendorName(vendor.getName())
+			.averageRating(vendor.getAverageRating())
+			.reviewCount(vendor.getReviewCount())
+			.logoMediaUrl(vendor.getLogoMedia() != null ?
+				s3Service.toCdnUrl(vendor.getLogoMedia().getMediaKey()) : null)
+			.build();
+	}
+
+	@Transactional(readOnly = true)
+	public VendorAddressResponseDTO getVendorAddressByName(String name) {
+		log.debug("업체명으로 주소 조회 시작 - vendorName: {}", name);
+
+		Vendor vendor = vendorRepository.findFirstByName(name)
+			.orElseThrow(() -> new NotFoundException("해당 이름의 업체를 찾을 수 없습니다: " + name));
+
+		// 완전한 주소 생성 (기본주소 + 상세주소)
+		String completeAddress = vendor.getFullAddress();
+		if (vendor.getAddressDetail() != null && !vendor.getAddressDetail().trim().isEmpty()) {
+			completeAddress += " " + vendor.getAddressDetail();
+		}
+
+		log.info("업체명으로 주소 조회 완료 - vendorName: {}, completeAddress: {}", name, completeAddress);
+
+		return VendorAddressResponseDTO.builder()
+			.vendorName(vendor.getName())
+			.fullAddress(vendor.getFullAddress())
+			.addressDetail(vendor.getAddressDetail())
+			.completeAddress(completeAddress)
+			.build();
+	}
 }
